tests/miniJava/neg/004330_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public class java { public static void Main ( String [ ] java ) { { } } } int [] java ( ) { return 0 ; } }
